--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -54,7 +54,7 @@
 
 
   <!-- Info Grid (Mobile only) -->
-  <div class="d-md-none w-100">
+  <div class="d-md-none w-100 ">
     <div class="mobile-info-grid d-flex align-items-center justify-content-between px-2 py-2">
       <!-- Logo -->
       <div class="logo-container">
@@ -127,7 +127,7 @@
 </nav>
 
 <!-- Mobile Slide Menu -->
-<div class="mobile-menu" [class.open]="mobileMenuOpen">
+<div class="mobile-menu navbar-collapse" [class.open]="mobileMenuOpen">
   <div class="mobile-menu-header d-flex justify-content-end p-2">
     <button class="close-btn" (click)="closeMobileMenu()">&times;</button>
   </div>
