--- a/src/app/thank-you/thank-you.component.html
+++ b/src/app/thank-you/thank-you.component.html
@@ -4,9 +4,12 @@
         <div class="text-center py-5">
             <img src="assets/images/thank_you_icon.svg" alt="">
             <h5 class="thank">Thank <span class="you">You</span></h5>
-            <p class="m-0 p_txt">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem IpsumLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum</p>
+            <h1>
+            </h1>
+            <p class="text-center m-0" style="font-size:30px; font-weight:700">
+                Your form was submitted successfully
+            </p>
+            <p class="text-center" style="font-size:25px">Our team will get back to you shortly.</p>
             <button class="btn_bg mt-5" (click)="goToHome()">Go To Home Page</button>
         </div>
     </div>
