--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -101,6 +101,9 @@ p {
   height: 100%;
   object-fit: cover;
 }
+#mobileTab .nav-link.active .mobile_left_box {
+  background-color: #6ABD45 !important;
+}
 
 .text_success {
   color: #8FC64E;
