--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -34,27 +34,74 @@
           <div class="contact-header">
             <h5 style="font-weight: 500; font-family: 'Roboto', sans-serif;">Contact Us</h5>
           </div>
-          <form>
+          <form #contactForm="ngForm" (ngSubmit)="submitContactForm(contactForm.value)">
             <div class="row g-3">
               <div class="col-md-4">
-                <label for="fullName" class="form-label d-flex justify-content-start form_label">Full Name*</label>
-                <input type="text" class="form-control" id="fullName" placeholder="Enter full name">
+                <label 
+                  for="fullName" 
+                  class="form-label d-flex justify-content-start form_label"
+                  [ngClass]="{'text-danger': contactForm.submitted && fullName.invalid}"
+                >Full Name*</label>
+                <input 
+                  type="text" 
+                  class="form-control" 
+                  id="fullName" 
+                  name="name" 
+                  ngModel 
+                  required 
+                  minlength="3"
+                  #fullName="ngModel"
+                  placeholder="Enter full name">
               </div>
               <div class="col-md-4">
-                <label for="email" class="form-label d-flex justify-content-start form_label">Email ID</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter email">
+                <label 
+                  for="email" 
+                  class="form-label d-flex justify-content-start form_label"
+                  [ngClass]="{'text-danger': contactForm.submitted && email.invalid}"
+                >Email ID</label>
+                <input 
+                  type="email" 
+                  class="form-control" 
+                  id="email" 
+                  name="email" 
+                  ngModel 
+                  #email="ngModel"
+                  placeholder="Enter email">
               </div>
               <div class="col-md-4">
-                <label for="phone" class="form-label d-flex justify-content-start form_label">Phone Number*</label>
+                <label 
+                  for="phone" 
+                  class="form-label d-flex justify-content-start form_label"
+                  [ngClass]="{'text-danger': contactForm.submitted && phone.invalid}"
+                >Phone Number*</label>
                 <div class="input-group">
                   <span class="input-group-text" style="border: 1px solid #000;">+91</span>
-                  <input type="tel" class="form-control" id="phone" placeholder="Enter number">
+                  <input 
+                    type="tel" 
+                    class="form-control" 
+                    id="phone" 
+                    name="phone" 
+                    ngModel 
+                    required 
+                    pattern="^[6-9]\d{9}$"
+                    #phone="ngModel"
+                    placeholder="Enter number">
                 </div>
               </div>
               <div class="col-12">
-                <label for="feedback" class="form-label d-flex justify-content-start form_label">Type Your Message
-                  Here</label>
-                <textarea class="form-control" id="feedback" rows="4" placeholder=""></textarea>
+                <label 
+                  for="feedback" 
+                  class="form-label d-flex justify-content-start form_label"
+                  [ngClass]="{'text-danger': contactForm.submitted && message.invalid}"
+                >Type Your Message Here</label>
+                <textarea 
+                  class="form-control" 
+                  id="feedback" 
+                  name="message" 
+                  ngModel 
+                  #message="ngModel"
+                  rows="4" 
+                  placeholder=""></textarea>
               </div>
               <div class="col-12 text-center">
                 <button type="submit" class="btn sub_btn">Submit</button>
