--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -76,8 +76,8 @@
 
   <div class="" *ngIf="active_button==1">
     <div class="carousel-container pt-1 pb-5">
-      <div class="carousel">
-        <div class="carousel-slide" *ngFor="let dep of depertments">
+      <div class="carousel" [style.transform]="getTransform()" [style.transition]="'transform 0.4s ease'">
+        <div class="carousel-slide" *ngFor="let dep of depertments" style="min-width:100%">
           <div class="text-center specialities-container">
             <div class="title-container py-3">
               <div class="line line-left"></div>
@@ -107,7 +107,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-buttons px-3">
+      <div class="carousel-buttons px-3 d-flex justify-content-between" style="gap:12px">
         <img class="me-1" src="assets/images/{{index!=0?'back_black.svg':'back_gray.svg'}}" alt=""
           (click)="index!=0?updateCarousel('prev'):''">
         <img class="ms-1"
